[package]
name = "pyri_tooltip"
version = "0.3.0"
edition = "2024"
description = "Powerful tooltips for Bevy"
repository = "https://github.com/benfrankel/pyri_tooltip"
license = "MIT OR Apache-2.0"
keywords = ["game", "bevy", "ui", "tooltip", "widget"]
categories = ["game-development", "gui"]

[features]
default = ["bevy_reflect"]
bevy_reflect = ["dep:bevy_reflect", "bevy_ecs/bevy_reflect"]

[dependencies]
bevy_app = { version = "0.16", default-features = false }
bevy_asset = { version = "0.16", default-features = false }
bevy_color = { version = "0.16", default-features = false }
bevy_ecs = { version = "0.16", default-features = false }
bevy_math = { version = "0.16", default-features = false }
bevy_reflect = { version = "0.16", default-features = false, optional = true }
bevy_render = { version = "0.16", default-features = false }
bevy_sprite = { version = "0.16", default-features = false }
bevy_text = { version = "0.16", default-features = false }
bevy_time = { version = "0.16", default-features = false }
bevy_transform = { version = "0.16", default-features = false }
bevy_ui = { version = "0.16", default-features = false }
bevy_window = { version = "0.16", default-features = false }
tiny_bail = "0.4"

[dev-dependencies]
bevy = "0.16"

[lints.rust]
missing_docs = "deny"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
core_instead_of_alloc = "warn"
